# trademox

./: README.md
trademox/: .gitignore  Cargo.toml  Dockerfile  config.yaml
trademox/.github/workflow/: ci.yaml
trademox/src/: lib.rs  main.rs
trademox/src/app/: app_box.rs  mod.rs
trademox/src/configs/: yaml_config.rs
trademox/src/creator/: mod.rs  tk_creator.rs
trademox/src/data/: mod.rs  ticker_data.rs  yfinance_data.rs
trademox/src/errors/: api_error.rs  mod.rs  tk_errors.rs  ws_errors.rs  yf_error.rs
trademox/src/logging/: mod.rs  tracing_initial.rs
trademox/src/requests/: mod.rs  tk_request.rs  tk_request_checker.rs  tk_request_validator.rs
trademox/src/websocket/: mod.rs  ws_handler.rs  ws_msg_handler.rs  ws_router.rs  ws_sender.rs  ws_upgrade.rs
trademox/tests/: tk_request_checker_test.rs  ws_upgrade_test.rs
